--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using MCSkinEditor.Client.Shared
 @using Blazor.Extensions.Canvas
 @using Blazor.Extensions.Canvas.Canvas2D
+@using BlazorPanzoom
